test/sema/typeck/lambda/assignment-return-mismatch.out
error: `return` expects value of type `Int32` but got `()`.
--> assignment-return-mismatch.dora:1:33
 | fn f() { let _x: (): Int32 = || {}; }
                                   ~
 | 
1 error found.
