test/sema/typeck/lambda/assignment-return-mismatch.dora
fn f() { let _x: (): Int32 = || {}; }
